# flask-on-docker

./: .dockerignore  .env.dev  .env.prod  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
flask_on_docker/services/nginx/: nginx.conf
flask_on_docker/services/web/project/: __init__.py  config.py
