[tool.poetry]
name = "flask-on-docker"
version = "0.1.0"
description = ""
authors = ["yan <remtoehy@163.com>"]
readme = "README.md"
packages = [
    {include = "flask_on_docker"}
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
